[package]
name = "reqwest-sse-test"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { git = "https://github.com/seanmonstar/reqwest" }
#futures-preview = { version = "=0.3.0-alpha.18", features = ["compat"] }
tokio = { version = "=0.2.0-alpha.5"}